--- a/test/test_genome.html
+++ b/test/test_genome.html
@@ -13,7 +13,7 @@ body {
 	}
 		</style>
 		<script src="../sigma/sigma.min.js"></script>
-		<script src="../neat/genome.js"></script>
+		<script src="../src/genome.js"></script>
 	</head>
 	<body>
 		<div id="container"></div>
