--- a/test/test_genome.html
+++ b/test/test_genome.html
@@ -7,12 +7,14 @@ body {
 	margin: 0;
 }
 	#container {
-		position: absolute;
-		width: 100%;
-		height: 100%;
+		top : 0;
+		bottom : 0;
+		right : 0;
+		left : 0;
+		position : absolute;
 	}
 		</style>
-		<script src="../sigma/sigma.min.js"></script>
+		<script src="../deps/sigma.min.js"></script>
 		<script src="../src/genome.js"></script>
 	</head>
 	<body>
