--- a/test/test_genome.html
+++ b/test/test_genome.html
@@ -6,7 +6,7 @@
 body {
 	margin: 0;
 }
-	#container {
+	#sigma_container {
 		top : 0;
 		bottom : 0;
 		right : 0;
@@ -18,7 +18,7 @@ body {
 		<script src="../src/genome.js"></script>
 	</head>
 	<body>
-		<div id="container"></div>
+		<div id="sigma_container"></div>
 		<script src="./test_genome.js"></script>
 	</body>
 </html>
